--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,190 +1,124 @@
 * {
-    border: none;
-    border-radius: 0px;
-    font-family: "JetBrainsMono Nerd Font";
-    font-weight: bold;
-    font-size: 12px;
-    min-height: 0px;
+  min-height: 0;
+  font-family: "CaskaydiaCove Nerd Font Mono";
+  font-size: 14px;
 }
-
 window#waybar {
-    background: rgba(17, 17, 27, .10);
+  transition-property: background-color;
+  transition-duration: 0.5s;
+  /* background-color: #1e1e2e; */
+  /* background-color: #181825; */
+  background-color: rgba(26, 27, 38, 0.8);
 }
 
-tooltip {
-    background: #1e1e2e;
-    color: #cdd6f4;
-    border-radius: 10px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #11111b;
+window#waybar.hidden {
+  opacity: 0.5;
+}
+
+#workspaces {
+border-radius: 10px;
+background: transparent;
+transition: none;
+padding-left: 12px;
+padding-right: 6px;
 }
 
 #workspaces button {
-    box-shadow: none;
-	text-shadow: none;
-    padding: 0px;
-    border-radius: 7px;
-    margin-top: 3px;
-    margin-bottom: 3px;
-    padding-left: 2px;
-    padding-right: 2px;
-    color: #cdd6f4;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
+transition: none;
+color: #e0af68;
+background: transparent;
+margin-right: 10px;
+}
+
+#workspaces button.persistent {
+transition: none;
+color: #7aa2f7;
+background: transparent;
+font-size: 4px;
+}
+
+#workspaces button.empty {
+color: #7aa2f7;
+font-size: 2px;
+transition: none;
+background: transparent;
 }
 
 #workspaces button.active {
-    background: #a6adc8;
-    color: #313244;
-    margin-left: 2px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-right: 2px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+transition: none;
+color: #e0af68;
+background: transparent;
+font-size: 4px;
 }
 
-#workspaces button:hover {
-    background: #f5c2e7;
-    color: #313244;
-    padding-left: 2px;
-    padding-right: 2px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
-}
 
-#custom-rofi,
-#cpu,
-#memory,
-#custom-power,
 #clock,
-#workspaces,
-#window,
-#network,
-#battery,
-#bluetooth,
 #pulseaudio,
-#custom-wallchange,
+#battery,
+#cpu,
+#tray,
+#memory,
+#temperature,
+#window {
+  padding: 0px 8px;
+  margin: 6px 3px;
+  color: #a9b1d6;
+  border-radius: 20px;
+  background-color: transparent;
+}
+#custom-logo {
+  padding: 0px 10px;
+}
+
 #tray {
-    color: #cdd6f4;
-    background: #11111b;
-    opacity: 1;
-    padding: 0px;
-    margin: 3px 0px 3px 0px;
+  font-size: 10px;
 }
 
-/* rofi menu */
-
-#custom-rofi {
-    border-radius: 10px 10px 10px 10px;
-    margin-left: 25px;
-    padding-left: 12px;
-    padding-right: 14px;
-    margin-right: 6px;
- 
+#custom-sep {
+  padding: 0px;
+  color: #585b70;
 }
 
-/* resource monitor block */
+#custom-spotify.playing {
+  color: #a6e3a1;
+}
+
+window#waybar.empty #window {
+  background-color: transparent;
+}
 
 #cpu {
-    border-radius: 10px 0px 0px 10px;
-    padding-left: 12px;
-    padding-right: 4px;
+  color: #a9b1d6;
 }
 
 #memory {
-    border-radius: 0px 10px 10px 0px;
-    border-left-width: 0px;
-    padding-left: 4px;
-    padding-right: 12px;
-    margin-right: 6px;
+  color: #a9b1d6;
 }
-
-
-/* date time block */
 
 #clock {
-    border-radius: 10px;
-    margin-left: 6px;
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-left: 6px;
+  color: #a9b1d6;
 }
 
+#temperature{
+color: #a9b1d6;
+}
 
-/* workspace window block */
-
-#workspaces {
-    border-radius: 10px 0px 0px 10px;
-    padding-left: 12px;
+#clock.date {
+  color: #e0af68;
 }
 
 #window {
-    border-radius: 0px 10px 10px 0px;
-    padding-right: 12px;
+  color: #e0af68;
 }
-
-
-/* control center block */
-
-#custom-updates {
-    border-radius: 10px 0px 0px 10px;
-    margin-left: 6px;
-    padding-left: 12px;
-    padding-right: 4px;
-}
-
-#network {
-    border-radius: 10px 0px 0px 10px;
-    margin-left: 6px;
-    padding-left: 12px;
-    padding-right: 4px;
-}
-
-#battery {
-  padding-left: 4px;
-  padding-right: 4px;
-
-}
-#bluetooth {
-    padding-left: 4px;
-    padding-right: 4px;
-} 
 
 #pulseaudio {
-    padding-left: 4px;
-    padding-right: 4px;
+  color: #a9b1d6;
 }
 
-#pulseaudio.microphone {
-    padding-left: 4px;
-    padding-right: 4px;
+#pulseaudio.muted {
+  color: #f7768e;
 }
 
-#custom-wallchange {
-    padding-left: 4px;
-    padding-right: 6px;
-}
-
-
-/* system tray block */
-
-#custom-mode {
-    border-radius: 10px 0px 0px 10px;
-    margin-left: 6px;
-    padding-left: 12px;
-    padding-right: 4px;
-}
-
-#tray {
-    padding-left: 4px;
-    padding-right: 4px;
-}
-
-#custom-power {
-    border-radius: 0px 10px 10px 0px;
-    padding-left: 4px;
-    padding-right: 12px;
-    margin-right: 25px;
+tooltip {
+  border-radius: 8px;
 }
