--- a/config/wlogout/style.css
+++ b/config/wlogout/style.css
@@ -1,60 +1,58 @@
-window {
-    font-family: monospace;
-    font-size: 14pt;
-    color: #cdd6f4; /* text */
-    background-color: rgba(30, 30, 46, 0.5);
+* {
+background-image: none;
 }
-
+window {
+    background-color: rgba(0, 0, 0, 0.9);
+}
 button {
+    background-color: transparent;
+    border-style: solid;
+    border-width: 0px;
+    border-radius: 0;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 25%;
-    border: none;
-    background-color: rgba(30, 30, 46, 0);
-    margin: 5px;
-    transition: box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    color: #D9E0EE;
 }
 
-button:hover {
-    background-color: rgba(49, 50, 68, 0.1);
-}
-
-button:focus {
+button:focus, button:active, button:hover {
     background-color: #cba6f7;
-    color: #1e1e2e;
+    color: #D9E0EE;
+    outline-style: none;
 }
 
 #lock {
-    background-image: image(url("./lock.png"));
-}
-#lock:focus {
-    background-image: image(url("./lock-hover.png"));
+margin: 10px;
+border-radius: 20px;
+background-image: image(url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
 }
 
 #logout {
-    background-image: image(url("./logout.png"));
-}
-#logout:focus {
-    background-image: image(url("./logout-hover.png"));
+margin: 10px;
+border-radius: 20px;
+background-image: image(url("/usr/share/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
 }
 
 #suspend {
-    background-image: image(url("./sleep.png"));
+margin: 10px;
+border-radius: 20px;
+background-image: image(url("/usr/share/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
 }
-#suspend:focus {
-    background-image: image(url("./sleep-hover.png"));
+
+#hibernate {
+margin: 10px;
+border-radius: 20px;
+background-image: image(url("/usr/share/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
 }
 
 #shutdown {
-    background-image: image(url("./power.png"));
-}
-#shutdown:focus {
-    background-image: image(url("./power-hover.png"));
+margin: 10px;
+border-radius: 20px;
+background-image: image(url("/usr/share/wlogout/icons/shutdown.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
 }
 
 #reboot {
-    background-image: image(url("./restart.png"));
-}
-#reboot:focus {
-    background-image: image(url("./restart-hover.png"));
+margin: 10px;
+border-radius: 20px;
+background-image: image(url("/usr/share/wlogout/icons/reboot.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
 }
